--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <img class="loader" src="video/loader.gif" alt="Loading">
-    <video class="bg-video" src="video/full-hd.mp4" autoplay loop></video>
+    <video class="bg-video" src="video/full-hd.mp4" autoplay loop muted></video>
     <div class="overlay"></div>
     <div class="content">
         <div class="info">
